Experience premium wedding suit rental collections across Kerala with expert fitting services starting from ₹4,999. Elegant styles, perfect fits, and hassle-free rentals for grooms & groomsmen. Book your fitting today!

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   
   <!-- Primary Meta Tags -->
-  <title>Premium Wedding Suit Rentals in Kerala - Suitor Guy</title>
-  <meta name="title" content="Premium Wedding Suit Rentals in Kerala - Suitor Guy" />
-  <meta name="description" content="Rent premium wedding suits in Kerala with Suitor Guy. Elegant styles, perfect fits, and hassle-free rentals for grooms & groomsmen. Book your suit today!" />
-  <meta name="keywords" content="wedding suit rental Kerala, tuxedo rental Kerala, groom suit rental, wedding dress rental Trivandrum, suit rental Kochi, wedding suit Thrissur, affordable suit rental, premium suit rental Kerala, Suitor Guy" />
+  <title>Premium Wedding Suit Rental Collection Across Kerala | Expert Fitting - Suitor Guy</title>
+  <meta name="title" content="Premium Wedding Suit Rental Collection Across Kerala | Expert Fitting - Suitor Guy" />
+  <meta name="description" content="Experience premium wedding suit rental collections across Kerala with expert fitting services starting from ₹4,999. Elegant styles, perfect fits, and hassle-free rentals for grooms & groomsmen. Book your fitting today!" />
+  <meta name="keywords" content="wedding suit rental Kerala, tuxedo rental Kerala, groom suit rental, wedding dress rental Trivandrum, suit rental Kochi, wedding suit Thrissur, affordable suit rental, premium suit rental Kerala, Suitor Guy, expert fitting services, suit collection Kerala, wedding suit fitting, premium collection, suit rental across Kerala" />
   <meta name="author" content="Suitor Guy" />
   <meta name="robots" content="index, follow" />
   
@@ -26,8 +26,8 @@
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://suitorguy.com/" />
-  <meta property="og:title" content="Premium Wedding Suit Rentals in Kerala - Suitor Guy" />
-  <meta property="og:description" content="Rent premium wedding suits in Kerala with Suitor Guy. Elegant styles, perfect fits, and hassle-free rentals for grooms & groomsmen. Book your suit today!" />
+  <meta property="og:title" content="Premium Wedding Suit Rental Collection Across Kerala | Expert Fitting - Suitor Guy" />
+  <meta property="og:description" content="Experience premium wedding suit rental collections across Kerala with expert fitting services starting from ₹4,999. Elegant styles, perfect fits, and hassle-free rentals for grooms & groomsmen." />
   <meta property="og:image" content="https://suitorguy.com/og-cover.jpg" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
@@ -37,8 +37,8 @@
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:url" content="https://suitorguy.com/" />
-  <meta name="twitter:title" content="Premium Wedding Suit Rentals in Kerala - Suitor Guy" />
-  <meta name="twitter:description" content="Rent premium wedding suits in Kerala with Suitor Guy. Elegant styles, perfect fits, and hassle-free rentals for grooms & groomsmen. Book your suit today!" />
+  <meta name="twitter:title" content="Premium Wedding Suit Rental Collection Across Kerala | Expert Fitting - Suitor Guy" />
+  <meta name="twitter:description" content="Experience premium wedding suit rental collections across Kerala with expert fitting services starting from ₹4,999. Elegant styles and perfect fits for grooms." />
   <meta name="twitter:image" content="https://suitorguy.com/og-cover.jpg" />
   
   <!-- LocalBusiness Schema Markup -->
@@ -130,16 +130,52 @@
   }
   </script>
   
+  <!-- Critical CSS - Above the fold styles -->
+  <style>
+    /* Critical CSS for faster rendering */
+    body { margin: 0; padding: 0; background: #EFEFEF; font-family: 'Cabin', Arial, sans-serif; }
+    .min-h-screen { min-height: 100vh; }
+    .w-full { width: 100%; }
+    .overflow-hidden { overflow: hidden; }
+    .bg-\\[\\#EFEFEF\\] { background-color: #EFEFEF; }
+    .flex { display: flex; }
+    .flex-col { flex-direction: column; }
+    .items-center { align-items: center; }
+    .justify-center { justify-content: center; }
+    .text-center { text-align: center; }
+    .uppercase { text-transform: uppercase; }
+    .font-bold { font-weight: 700; }
+    .text-white { color: white; }
+    .text-black { color: black; }
+    .bg-black { background-color: black; }
+    .bg-blue-500 { background-color: #3b82f6; }
+    .h-10 { height: 2.5rem; }
+    .w-10 { width: 2.5rem; }
+    .rounded-full { border-radius: 9999px; }
+    .transition-colors { transition-property: color, background-color, border-color; }
+    .duration-300 { transition-duration: 300ms; }
+    .hover\\:bg-blue-700:hover { background-color: #1d4ed8; }
+    .hover\\:text-white:hover { color: white; }
+  </style>
+  
   <!-- Preload Critical Resources -->
   <link rel="preload" href="https://fonts.googleapis.com/css2?family=Griffin&display=swap" as="style" />
   <link rel="preload" href="https://fonts.googleapis.com/css2?family=Cabin:wght@400;500;600;700&display=swap" as="style" />
-  <link rel="preload" href="/src/assets/hero-image.png" as="image" />
-  <link rel="preload" href="/src/assets/Logo.png" as="image" />
+  <link rel="preload" href="/src/assets/hero-image.png" as="image" type="image/png" />
+  <link rel="preload" href="/src/assets/Logo.png" as="image" type="image/png" />
   
   <!-- DNS Prefetch for Performance -->
   <link rel="dns-prefetch" href="//fonts.googleapis.com">
   <link rel="dns-prefetch" href="//fonts.gstatic.com">
   <link rel="dns-prefetch" href="//maps.googleapis.com">
+  <link rel="dns-prefetch" href="//www.googletagmanager.com">
+  <link rel="dns-prefetch" href="//connect.facebook.net">
+  <link rel="dns-prefetch" href="//www.clarity.ms">
+  
+  <!-- Preconnect to external domains -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preconnect" href="https://www.googletagmanager.com" crossorigin>
   
   <!-- Fonts with display=swap for better performance -->
   <link href="https://fonts.googleapis.com/css2?family=Griffin&display=swap" rel="stylesheet">
@@ -162,13 +198,34 @@
     gtag('js', new Date());
     gtag('config', 'G-FNFKBD8K4X');
   </script>
+  
+  <!-- Facebook Pixel Code -->
+  <script>
+    !function(f,b,e,v,n,t,s)
+    {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+    n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+    if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+    n.queue=[];t=b.createElement(e);t.async=!0;
+    t.src=v;s=b.getElementsByTagName(e)[0];
+    s.parentNode.insertBefore(t,s)}(window, document,'script',
+    'https://connect.facebook.net/en_US/fbevents.js');
+    fbq('init', 'YOUR_PIXEL_ID'); // Replace with your actual Pixel ID
+    fbq('track', 'PageView');
+  </script>
 </head>
 
 <body>
+  <!-- Facebook Pixel noscript fallback -->
+  <noscript>
+    <img height="1" width="1" style="display:none" 
+         src="https://www.facebook.com/tr?id=YOUR_PIXEL_ID&ev=PageView&noscript=1" />
+  </noscript>
+  
   <div id="root"></div>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDFQzgILEmlQYTvNozzpJdZ_9GqkrDV794&libraries=places"></script>
+  <!-- Defer non-critical JavaScript -->
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDFQzgILEmlQYTvNozzpJdZ_9GqkrDV794&libraries=places" defer></script>
 
-  <script type="module" src="/src/main.jsx"></script>
+  <script type="module" src="/src/main.jsx" defer></script>
 </body>
 
 </html>
