--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
     t.src=v;s=b.getElementsByTagName(e)[0];
     s.parentNode.insertBefore(t,s)}(window, document,'script',
     'https://connect.facebook.net/en_US/fbevents.js');
-    fbq('init', 'YOUR_PIXEL_ID'); // Replace with your actual Pixel ID
+    fbq('init', '1234567890123456'); // Replace with your actual Pixel ID
     fbq('track', 'PageView');
   </script>
 </head>
@@ -218,7 +218,7 @@
   <!-- Facebook Pixel noscript fallback -->
   <noscript>
     <img height="1" width="1" style="display:none" 
-         src="https://www.facebook.com/tr?id=YOUR_PIXEL_ID&ev=PageView&noscript=1" />
+         src="https://www.facebook.com/tr?id=1234567890123456&ev=PageView&noscript=1" />
   </noscript>
   
   <div id="root"></div>
