feat: optimize meta tags for better SEO performance with concise title and keyword-rich description

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   
   <!-- Primary Meta Tags -->
-  <title>Premium Wedding Suit Rental Collection Across Kerala | Expert Fitting - Suitor Guy</title>
-  <meta name="title" content="Premium Wedding Suit Rental Collection Across Kerala | Expert Fitting - Suitor Guy" />
-  <meta name="description" content="Experience premium wedding suit rental collections across Kerala with expert fitting services starting from ₹4,999. Elegant styles, perfect fits, and hassle-free rentals for grooms & groomsmen. Book your fitting today!" />
+  <title>Premium Wedding Suit Rentals in Kerala | SuitorGuy</title>
+  <meta name="title" content="Premium Wedding Suit Rentals in Kerala | SuitorGuy"/>
+  <meta name="description" content="Rent premium wedding suits in Kerala with Suitor Guy. Elegant styles, perfect fits, and hassle-free rentals for grooms & groomsmen. Book your suit today!"/>
   <meta name="keywords" content="wedding suit rental Kerala, tuxedo rental Kerala, groom suit rental, wedding dress rental Trivandrum, suit rental Kochi, wedding suit Thrissur, affordable suit rental, premium suit rental Kerala, Suitor Guy, expert fitting services, suit collection Kerala, wedding suit fitting, premium collection, suit rental across Kerala" />
   <meta name="author" content="Suitor Guy" />
   <meta name="robots" content="index, follow" />
@@ -26,8 +26,8 @@
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://suitorguy.com/" />
-  <meta property="og:title" content="Premium Wedding Suit Rental Collection Across Kerala | Expert Fitting - Suitor Guy" />
-  <meta property="og:description" content="Experience premium wedding suit rental collections across Kerala with expert fitting services starting from ₹4,999. Elegant styles, perfect fits, and hassle-free rentals for grooms & groomsmen." />
+  <meta property="og:title" content="Premium Wedding Suit Rentals in Kerala | SuitorGuy" />
+  <meta property="og:description" content="Rent premium wedding suits in Kerala with Suitor Guy. Elegant styles, perfect fits, and hassle-free rentals for grooms & groomsmen. Book your suit today!" />
   <meta property="og:image" content="https://suitorguy.com/og-cover.jpg" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
@@ -37,8 +37,8 @@
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:url" content="https://suitorguy.com/" />
-  <meta name="twitter:title" content="Premium Wedding Suit Rental Collection Across Kerala | Expert Fitting - Suitor Guy" />
-  <meta name="twitter:description" content="Experience premium wedding suit rental collections across Kerala with expert fitting services starting from ₹4,999. Elegant styles and perfect fits for grooms." />
+  <meta name="twitter:title" content="Premium Wedding Suit Rentals in Kerala | SuitorGuy" />
+  <meta name="twitter:description" content="Rent premium wedding suits in Kerala with Suitor Guy. Elegant styles, perfect fits, and hassle-free rentals for grooms & groomsmen. Book your suit today!" />
   <meta name="twitter:image" content="https://suitorguy.com/og-cover.jpg" />
   
   <!-- LocalBusiness Schema Markup -->
